# Voxium

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.py
CMake/: CompilerWarnings.cmake  Doxygen.cmake  GenerateAndInstallConfig.cmake  PlatformSettings.cmake  ProjectOptions.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Tools.cmake
Engine/: CMakeLists.txt
Engine/Source/Programs/: CMakeLists.txt
Engine/Source/Programs/CodeGen/: CodeGen.cmake  CodeGen.txt.in
Engine/Source/Programs/CodeGen/Templates/: allReflectionFile.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
Engine/Source/Programs/MetaParser/: CMakeLists.txt  README.md
Engine/Source/Programs/MetaParser/Parser/: Main.cpp
Engine/Source/Programs/MetaParser/Parser/Common/: Precompiled.h  SchemaModule.h
Engine/Source/Programs/MetaParser/Parser/Cursor/: Cursor.cpp  Cursor.h  CursorType.cpp
Engine/Source/Programs/MetaParser/Parser/Generator/: Generator.cpp  Generator.h  ReflectionGenerator.cpp  ReflectionGenerator.h  SerializerGenerator.cpp  SerializerGenerator.h
Engine/Source/Programs/MetaParser/Parser/LanguageTypes/: Class.cpp  Class.h  Field.cpp  Field.h  Method.cpp  Method.h  TypeInfo.cpp  TypeInfo.h
Engine/Source/Programs/MetaParser/Parser/Meta/: MetaInfo.cpp  MetaInfo.h  MetaUtils.cpp  MetaUtils.h
Engine/Source/Programs/MetaParser/Parser/Parser/: Parser.cpp  Parser.h
Engine/Source/Programs/MetaParser/Parser/TemplateManager/: TemplateManager.cpp  TemplateManager.h
Engine/Source/Runtime/: CMakeLists.txt
Engine/Source/Runtime/Core/: Core.h  CoreMacros.h  Macro.h
Engine/Source/Runtime/Core/Allocator/: Allocator.h
Engine/Source/Runtime/Core/Base/: Hash.h
Engine/Source/Runtime/Core/Events/: EventBus.h  IEvent.h
Engine/Source/Runtime/Core/Logger/: Logger.cpp  Logger.h  LoggerImpl.h  LoggerImplSpdlog.cpp  LoggerImplSpdlog.h  LoggerLevel.h
Engine/Source/Runtime/Core/Math/: Rand.h
Engine/Source/Runtime/Core/Meta/: Json.h  MetaExample.cpp  MetaExample.h
Engine/Source/Runtime/Core/Meta/Reflection/: Reflection.cpp  Reflection.h  ReflectionRegister.cpp  ReflectionRegister.h
Engine/Source/Runtime/Core/Meta/Serializer/: Serializer.cpp  Serializer.h
Engine/Source/Runtime/Core/Pattern/: Singleton.h
Engine/Source/Runtime/Core/Primitives/: Color.h  EdgeInsets.h  Gravity.h  Int2.h  Int3.h  Matrix3F.h  Matrix4.h  MovingAverage.h  Rectangle.h  RingBuffer.h  Size.h  Vector.h  Vector3.h  Vector3F.h  VectorF.h
Engine/Source/Runtime/Core/Private/Math/: EdgeInsets.cpp  Int2.cpp  Int3.cpp  Matrix3F.cpp  Matrix4.cpp  Matrix4F.cpp  MovingAverage.cpp  Rectangle.cpp  Size.cpp  Vector.cpp  Vector3.cpp  Vector3F.cpp  Vector4.cpp  Vector4F.cpp  VectorF.cpp
Engine/Source/Runtime/Core/Private/Watch/: CustomWatch.cpp  RollingWatch.cpp  StopWatch.cpp  TickWatch.cpp
Engine/Source/Runtime/Core/Public/Math/: EdgeInsets.h  Gravity.h  Int2.h  Int3.h  Lerp.h  Line.h  MathAssert.h  MathUtility.h  Matrix3F.h  Matrix4.h  Matrix4F.h  MovingAverage.h  Rectangle.h  RingBuffer.h  Size.h  Vector.h  Vector3.h  Vector3F.h  Vector4.h  Vector4F.h  VectorF.h
Engine/Source/Runtime/Core/Public/Watch/: CustomWatch.h  RollingWatch.h  StopWatch.h  TickWatch.h
Engine/Source/Runtime/Core/Voxel/: IVoxelMap.h
Engine/Source/Runtime/Platform/: Platform.cpp  Platform.h
Engine/Source/Runtime/Platform/Desktop/: DtContext.cpp  DtContext.h  DtController.cpp  DtController.h  DtGlobalInputContext.cpp  DtGlobalInputContext.h  DtRenderSurface.cpp  DtRenderSurface.h
Engine/Source/Runtime/Platform/Desktop/Vulkan/: VkBuffer.cpp  VkBuffer.h  VkCommandBuffer.cpp  VkCommandBuffer.h  VkContext.cpp  VkContext.h  VkFrameBuffer.cpp  VkFrameBuffer.h  VkFrameBufferFormat.cpp  VkFrameBufferFormat.h  VkImage.cpp  VkImage.h  VkPlatform.cpp  VkPlatform.h  VkRenderContext.cpp  VkRenderContext.h  VkRenderPipeline.cpp  VkRenderPipeline.h  VkShader.cpp  VkShader.h  VkStagingResource.h  VkTexture.cpp  VkTexture.h  VkTextureBinding.cpp  VkTextureBinding.h  VkTextureSampler.cpp  VkTextureSampler.h  VkUniformBinding.cpp  VkUniformBinding.h  VkUniformBuffer.cpp  VkUniformBuffer.h  VkUtil.cpp  VkUtil.h  VkVertexBuffer.cpp  VkVertexBuffer.h
Engine/Source/Runtime/Platform/Input/: IController.h  IGlobalInputContext.h  ISurfaceInputContext.h
Engine/Source/Runtime/Platform/Render/: ICommandBuffer.h  IFrameBuffer.h  IFrameBufferFormat.h  IRenderContext.h  IRenderPipeline.h  IRenderSurface.h  IRenderTarget.h  IResource.h  IShader.h  ITexture.h  ITextureBinding.h  ITextureSampler.h  IUniformBinding.h  IUniformBuffer.h  IVertexBuffer.h
Engine/Source/Runtime/Platform/Utils/: VecMath.h
Engine/Source/Runtime/Test/: CMakeLists.txt
Engine/Source/Runtime/Test/Core/Math/: MovingAverageUT.cpp  RectangleUT.cpp  RingBufferUT.cpp  SizeUT.cpp  VectorFUT.cpp  VectorUT.cpp
Engine/Source/Runtime/Test/Core/Primitives/: MovingAverageUT.cpp  RectangleUT.cpp  RingBufferUT.cpp  SizeUT.cpp  VectorFUT.cpp  VectorUT.cpp
Tools/: Main.py
Tools/BuildSystem/: Builder.py  BuilderBase.py  ConanHelper.py  ConanSetup.py  ConfigLoader.py  EnvSetup.py  GenerateEnv.py  ProjectConfig.py  Runner.py  VenvHelper.py
Tools/Config/: ProjectConfig.json
Tools/Utilities/: CodeFormat.py  FileUtils.py  GitKeep.py  Platform.py  PrintTree.py  ShellUtils.py  __init__.py  logger.py
